# TimeSeriesForecasterStoreSales

./: .gitignore  CreateModel.ipynb  CreateModel_attempt2.ipynb  CreateModel_attempt3.ipynb  EDA.ipynb  Ideas.ipynb  README.md  SingleFileAttempt.ipynb  WarehouseData.ipynb  codigo_panel_funcional.ipynb  data_preparation.py  data_preparation_attempt2.py  data_preparation_attempt3.py  data_preparation_attempt4.py  data_preparation_utils.py  db_settings_example.ini  exploration.ipynb  exploration2.ipynb  pyproject.toml  pyscopg.ipynb  thinking.ipynb
data_engineering/: WarehouseData.ipynb  base_data_management.py  configuration_utils.py  create_db.py  create_tables.py  csv_sql_dataset_utils.py  csv_utils.py  data_engineering_management.py  data_preparation_attempt4.py  data_preparation_utils.py  dataset_properties.py  db_connector.py  db_interfacing.py  db_settings_example.env  db_settings_example.ini  df_utils.py  feature_creators.py  feature_group_factory.py  feature_storer.py  filter_utils.py  order_utils.py  readme-ELT.md  spark_interfacing.py  spark_playground.ipynb  spark_utils.py  spark_utils_experimental-legacy.py  sql_utils.py  train_test_splitting_utils.py  update_base_data.py  update_engineered_data.py
