[tool.poetry]
name = "time-series-forecaster-store-sales"
version = "0.1.0"
description = "An example machine learning pipeline to perform predictions|forecasting."
authors = ["OnyxianSoul <onyxiansoul@gmail.com>"]
license = "BSD0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
scikit-learn = "^1.4.0"
tqdm = "^4.66.1"
pandas = "^2.2.0"
# Issue between poetry and tensorflow metadata since >=2.11
# This is a temporary workaround
# related to https://github.com/python-poetry/poetry/issues/8271
# Inspired from https://github.com/tensorflow/tensorflow/blob/adb39b04e9cb116df4659a7e2de9eea27e62f25c/tensorflow/tools/pip_package/setup.py#L148-L162
tensorflow = {version = "^2.13.0" }
tensorflow-macos = { version = "^2.13.0", platform = "darwin", markers = "platform_machine=='arm64'" }
tensorflow-intel = { version = "^2.13.0", platform = "win32" }
tensorflow-cpu = [
    { version = "^2.13.0", platform = "linux", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },
    { version = "^2.13.0", platform = "darwin", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },
]
tensorflow-cpu-aws = { version = "^2.13.0", platform = "linux", markers = "platform_machine=='arm64' or platform_machine=='aarch64'" }
# https://github.com/tensorflow/tensorflow/blob/adb39b04e9cb116df4659a7e2de9eea27e62f25c/tensorflow/tools/pip_package/setup.py#L107-L108
# https://github.com/python-poetry/poetry/issues/8271#issuecomment-1697740447
tensorflow-io-gcs-filesystem = [
    { version = ">= 0.23.1", markers = "platform_machine!='arm64' or platform_system!='Darwin'" },
    { version = "< 0.32.0", markers = "platform_system == 'Windows'" }
]
ipykernel = "^6.29.2"
kaggle = "^1.6.5"
matplotlib = "^3.8.2"
streamlit = "^1.31.0"
seaborn = "^0.13.2"
xgboost = "^2.0.3"
plotly = "^5.22.0"
nbformat = "^5.10.4" #for plotly
bokeh = "^3.4.1"
hvplot = "^0.10.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
